[project]
name = "terminal-catacomb-crawler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "p-retrover", email = "primalretrover@outlook.com"},
]
dependencies = [
    "blessed>=1.20.0",
    "pygame>=2.6.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]


[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
]
